tests/script_errors/add_overflow/error.txt
Error: 
    2 | unsigned::max + 1;
      | ^^^^^^^^^^^^^^^^^ The binary operation `+` caused an overflow